--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -19,6 +19,8 @@ table th {
     text-align: center;
     text-shadow: 0 -1px 0 rgba(34,85,136,0.9);
     box-shadow: 0px 1px 1px rgba(255,255,255,0.3) inset;
+}
+table th:first-child {
     border-radius: 5px 0 0 0;
 }
 table th:last-child {
